--- a/inicial/conversor/conversor.css
+++ b/inicial/conversor/conversor.css
@@ -2,7 +2,6 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
-
 body {
     background: radial-gradient(circle at top, #020617, #020617);
     color: #fff;
@@ -11,7 +10,6 @@ body {
     align-items: center;
     height: 100vh;
 }
-
 .converter {
     background: #050e30;
     padding: 30px;
@@ -20,12 +18,9 @@ body {
     text-align: center;
     box-shadow: 0 0 40px rgba(0,0,0,0.6);
 }
-
 h1 {
     margin-bottom: 20px;
 }
-
-/* INPUT */
 input {
     width: 100%;
     padding: 12px;
@@ -34,20 +29,16 @@ input {
     border: none;
     font-size: 16px;
 }
-
-/* LINHA DAS MOEDAS */
-.selects {
+.selects { /* LINHA DAS MOEDAS */
     display: flex;
     align-items: center;
     gap: 10px;
     margin-bottom: 18px;
     width: 100%;
 }
-
-/* SELECTS */
 .selects select {
     flex: 1;
-    min-width: 0;              /* 🔥 ISSO resolve o vazamento */
+    min-width: 0;
     height: 44px;
     padding: 0 12px;
     border-radius: 10px;
@@ -57,8 +48,6 @@ input {
     overflow: hidden;
     text-overflow: ellipsis;
 }
-
-/* BOTÃO INVERTER */
 .invert {
     width: 44px;
     height: 44px;
@@ -73,14 +62,10 @@ input {
     align-items: center;
     justify-content: center;
 }
-
-
 .invert:hover {
     background: #374151;
     transform: rotate(180deg);
 }
-
-/* RESULTADO */
 #resultado {
     margin-top: 10px;
     font-size: 20px;
